--- a/datenschutz.html
+++ b/datenschutz.html
@@ -92,7 +92,7 @@
             <h2>Kontakt</h2>
             <p>
                 Bei Fragen zum Datenschutz können Sie uns unter folgender E-Mail-Adresse kontaktieren:<br>
-                info@trizecalc.de
+                info@TirzeCalc.de
             </p>
         </div>
     </div>
