--- a/datenschutz_en.html
+++ b/datenschutz_en.html
@@ -90,19 +90,21 @@
             <h2>Contact</h2>
             <p>
                 If you have any questions about data protection, you can contact us at the following email address:<br>
-                info@trizecalc.de
+                info@TirzeCalc.de 
             </p>
         </div>
     </div>
 
     <footer>
-        <p>
-            <a href="index.html" data-lang-link="back-to-calculator">← Back to Calculator</a> | 
-            <a href="impressum_en.html" data-lang-link="imprint">Imprint</a>
-        </p>
-        <p style="font-size: 0.8em; opacity: 0.6; margin-top: 10px;">
-            by Staubi | <a href="https://github.com/staubi82" target="_blank" rel="noopener noreferrer">GitHub</a>
-        </p>
+        <div class="footer-compact">
+            <a href="index.html">← Back to Calculator</a>
+            <span class="separator">•</span>
+            <a href="impressum_en.html">Imprint</a>
+            <span class="separator">•</span>
+            <span>by Staubi</span>
+            <span class="separator">•</span>
+            <a href="https://github.com/staubi82" target="_blank" rel="noopener noreferrer">GitHub</a>
+        </div>
     </footer>
 
     <script src="script.js"></script>
