--- a/impressum.html
+++ b/impressum.html
@@ -48,7 +48,7 @@
             
             <h2>Kontakt</h2>
             <p>
-                E-Mail: info@tirzecalc.de
+                E-Mail: info@TirzeCalc.de
             </p>
             
             <h2>Hinweis</h2>
