--- a/impressum_en.html
+++ b/impressum_en.html
@@ -48,7 +48,7 @@
             
             <h2>Contact</h2>
             <p>
-                E-Mail: info@tirzecalc.de
+                E-Mail: info@TirzeCalc.de
             </p>
             
             <h2>Note</h2>
@@ -74,13 +74,15 @@
     </div>
 
     <footer>
-        <p>
-            <a href="index.html" data-lang-link="back-to-calculator">← Back to Calculator</a> | 
-            <a href="datenschutz_en.html" data-lang-link="privacy-policy">Privacy Policy</a>
-        </p>
-        <p style="font-size: 0.8em; opacity: 0.6; margin-top: 10px;">
-            by Staubi | <a href="https://github.com/staubi82" target="_blank" rel="noopener noreferrer">GitHub</a>
-        </p>
+        <div class="footer-compact">
+            <a href="index.html">← Back to Calculator</a>
+            <span class="separator">•</span>
+            <a href="datenschutz_en.html">Privacy Policy</a>
+            <span class="separator">•</span>
+            <span>by Staubi</span>
+            <span class="separator">•</span>
+            <a href="https://github.com/staubi82" target="_blank" rel="noopener noreferrer">GitHub</a>
+        </div>
     </footer>
 
     <script src="script.js"></script>
