--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <meta name="theme-color" content="#767474">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-title" content="TirzeCalc.de">
     <title>TirzeCalc.de - Mounjaro Dosierungsrechner</title>
     
     <link rel="icon" type="image/x-icon" href="favicon.ico">
