--- a/datenschutz.html
+++ b/datenschutz.html
@@ -6,7 +6,14 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Datenschutz - TirzeCalc.de</title>
+    <title>Datenschutz - TirzeCalc.de | Tirzepatid Dosis- & Klickrechner</title>
+    <meta name="description" content="Datenschutzerklärung von TirzeCalc.de - dem kostenlosen Tirzepatid Dosierungsrechner für Mounjaro & KwikPen. Informationen zur Datenverarbeitung." />
+    <meta name="keywords" content="Datenschutz TirzeCalc, Tirzepatid Rechner Datenschutz, Mounjaro Rechner Datenschutz, KwikPen Dosierung Datenschutz, TirzeCalc.de Datenschutz" />
+    <meta name="author" content="Staubi" />
+    <meta property="og:title" content="Datenschutz - TirzeCalc.de" />
+    <meta property="og:description" content="Datenschutzerklärung von TirzeCalc.de - dem kostenlosen Tirzepatid Dosierungsrechner für Mounjaro & KwikPen." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tirzecalc.de/datenschutz.html" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
