--- a/datenschutz_en.html
+++ b/datenschutz_en.html
@@ -6,7 +6,14 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Privacy Policy - TirzeCalc.de</title>
+    <title>Privacy Policy - TirzeCalc.de | Tirzepatide Dose & Click Calculator</title>
+    <meta name="description" content="Privacy Policy of TirzeCalc.de - the free Tirzepatide dosage calculator for Mounjaro & KwikPen. Information on data processing." />
+    <meta name="keywords" content="Privacy Policy TirzeCalc, Tirzepatide calculator privacy, Mounjaro calculator privacy, KwikPen dosage privacy, TirzeCalc.de privacy" />
+    <meta name="author" content="Staubi" />
+    <meta property="og:title" content="Privacy Policy - TirzeCalc.de" />
+    <meta property="og:description" content="Privacy Policy of TirzeCalc.de - the free Tirzepatide dosage calculator for Mounjaro & KwikPen." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tirzecalc.de/datenschutz_en.html" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
