--- a/impressum.html
+++ b/impressum.html
@@ -6,7 +6,14 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <title>Impressum - TirzeCalc.de</title>
+    <title>Impressum - TirzeCalc.de | Tirzepatid Dosis- & Klickrechner</title>
+    <meta name="description" content="Impressum von TirzeCalc.de - dem kostenlosen Tirzepatid Dosierungsrechner für Mounjaro & KwikPen. Rechtliche Informationen und Kontaktdaten." />
+    <meta name="keywords" content="Impressum TirzeCalc, Tirzepatid Rechner Impressum, Mounjaro Rechner rechtlich, KwikPen Dosierung Impressum, TirzeCalc.de Impressum" />
+    <meta name="author" content="Staubi" />
+    <meta property="og:title" content="Impressum - TirzeCalc.de" />
+    <meta property="og:description" content="Impressum von TirzeCalc.de - dem kostenlosen Tirzepatid Dosierungsrechner für Mounjaro & KwikPen." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tirzecalc.de/impressum.html" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
