--- a/impressum_en.html
+++ b/impressum_en.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imprint - TirzeCalc.de</title>
+    <title>Imprint - TirzeCalc.de | Tirzepatide Dose & Click Calculator</title>
+    <meta name="description" content="Imprint of TirzeCalc.de - the free Tirzepatide dosage calculator for Mounjaro & KwikPen. Legal information and contact details." />
+    <meta name="keywords" content="Imprint TirzeCalc, Tirzepatide calculator imprint, Mounjaro calculator legal, KwikPen dosage imprint, TirzeCalc.de imprint" />
+    <meta name="author" content="Staubi" />
+    <meta property="og:title" content="Imprint - TirzeCalc.de" />
+    <meta property="og:description" content="Imprint of TirzeCalc.de - the free Tirzepatide dosage calculator for Mounjaro & KwikPen." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://tirzecalc.de/impressum_en.html" />
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
