--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="default" />
   <meta name="apple-mobile-web-app-title" content="TirzeCalc.de" />
-  <title>TirzeCalc.de - Mounjaro Dosierungsrechner</title>
+  <title>TirzeCalc.de – Tirzepatid Dosis- & Klickrechner | Mounjaro & KwikPen Dosierung</title>
+  <meta name="description" content="Kostenloser Tirzepatid Dosierungsrechner für Mounjaro & KwikPen. Berechnen Sie exakte Pen-Klicks für 2.5mg, 5mg, 7.5mg, 10mg, 12.5mg, 15mg. Präzise Dosisberechnung für Diabetes-Behandlung." />
+  <meta name="keywords" content="Mounjaro Dosierungsrechner, Tirzepatide Rechner, Mounjaro Pen Klicks berechnen, TirzeCalc, Mounjaro Rechner Deutschland, Tirzepatide Dosierungsrechner, Mounjaro Dosis Rechner, Pen Klicks Rechner, Mounjaro Injektionsrechner, Tirzepatide Pen Rechner, Mounjaro KwikPen Rechner, Tirzepatide KwikPen Dosierung, KwikPen Dosierungsrechner, Mounjaro KwikPen Klicks, Tirzepatide KwikPen Anwendung" />
+  <meta name="author" content="Staubi" />
+  <meta property="og:title" content="TirzeCalc.de – Tirzepatid Dosis- & Klickrechner" />
+  <meta property="og:description" content="Kostenloser Tirzepatid Dosierungsrechner für Mounjaro & KwikPen. Berechnen Sie exakte Pen-Klicks für Ihre Diabetes-Behandlung." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tirzecalc.de" />
+  <meta property="og:site_name" content="TirzeCalc.de" />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="shortcut icon" href="favicon.ico" />
