--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
   <!-- Footer -->
   <footer>
     <div class="footer-compact">
-      <span>by Staubi</span>
+      <span>Version 1.0 by Staubi</span>
       <span class="separator">•</span>
       <a href="https://github.com/staubi82" target="_blank" rel="noopener noreferrer">GitHub</a>
       <span class="separator">•</span>
