--- a/datenschutz.html
+++ b/datenschutz.html
@@ -20,6 +20,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="style.css?v=2.0">
+    <link rel="canonical" href="https://tirzecalc.de/datenschutz.html" />
 </head>
 <body class="dark-mode">
     <div class="top-bar">
