--- a/datenschutz_en.html
+++ b/datenschutz_en.html
@@ -1,26 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-    <title>Privacy Policy - TirzeCalc.de | Tirzepatide Dose & Click Calculator</title>
-    <meta name="description" content="Privacy Policy of TirzeCalc.de - the free Tirzepatide dosage calculator for Mounjaro & KwikPen. Information on data processing." />
-    <meta name="keywords" content="Privacy Policy TirzeCalc, Tirzepatide calculator privacy, Mounjaro calculator privacy, KwikPen dosage privacy, TirzeCalc.de privacy" />
-    <meta name="author" content="Staubi" />
-    <meta property="og:title" content="Privacy Policy - TirzeCalc.de" />
-    <meta property="og:description" content="Privacy Policy of TirzeCalc.de - the free Tirzepatide dosage calculator for Mounjaro & KwikPen." />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://tirzecalc.de/datenschutz_en.html" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="style.css?v=2.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+  <meta name="theme-color" content="#767474" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="TirzeCalc.de" />
+  <title>TirzeCalc.de – Tirzepatid Dosis- & Klickrechner | Mounjaro & KwikPen Dosierung</title>
+  <meta name="description" content="Kostenloser Tirzepatid Dosierungsrechner für Mounjaro & KwikPen. Berechnen Sie exakte Pen-Klicks für 2.5 mg, 5 mg, 7.5 mg, 10 mg, 12.5 mg, 15 mg. Präzise Dosisberechnung für Diabetes-Behandlung." />
+  <meta name="keywords" content="Mounjaro Dosierungsrechner, Tirzepatide Rechner, Mounjaro Pen Klicks berechnen, TirzeCalc, Mounjaro Rechner Deutschland, Tirzepatide Dosierungsrechner, Mounjaro Dosis Rechner, Pen Klicks Rechner, Mounjaro Injektionsrechner, Tirzepatide Pen Rechner, Mounjaro KwikPen Rechner, Tirzepatide KwikPen Dosierung, KwikPen Dosierungsrechner, Mounjaro KwikPen Klicks, Tirzepatide KwikPen Anwendung, Abnehmspritze, Mounjaro Abnehmspritze, Tirzepatide Abnehmspritze, Abnehmspritze Dosierung, Abnehmspritze Rechner, Gewichtsverlust Spritze, Abnehmspritze Mounjaro, Abnehmspritze Tirzepatide, GLP-1 Abnehmspritze" />
+  <meta name="author" content="Staubi" />
+  <link rel="canonical" href="https://tirzecalc.de/" />
+
+  <!-- OpenGraph / Social Sharing -->
+  <meta property="og:title" content="TirzeCalc.de – Tirzepatid Dosis- & Klickrechner" />
+  <meta property="og:description" content="Kostenloser Tirzepatid Dosierungsrechner für Mounjaro & KwikPen. Berechnen Sie exakte Pen-Klicks für Ihre Diabetes-Behandlung." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tirzecalc.de" />
+  <meta property="og:site_name" content="TirzeCalc.de" />
+  <meta property="og:image" content="https://tirzecalc.de/preview.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+
+  <!-- Twitter / X Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="TirzeCalc.de – Tirzepatid Dosis- & Klickrechner" />
+  <meta name="twitter:description" content="Berechne deine Tirzepatid-Dosis einfach online – kostenlos und präzise." />
+  <meta name="twitter:image" content="https://tirzecalc.de/preview.jpg" />
+
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+  <link rel="manifest" href="site.webmanifest" />
+  <link rel="stylesheet" href="style.css?v=2.2" />
 </head>
+
 <body class="dark-mode">
     <div class="top-bar">
         <button class="lang-btn" data-lang="de">DE</button>
