--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="apple-mobile-web-app-title" content="TirzeCalc.de" />
   <title>TirzeCalc.de – Tirzepatid Dosis- & Klickrechner | Mounjaro & KwikPen Dosierung</title>
   <meta name="description" content="Kostenloser Tirzepatid Dosierungsrechner für Mounjaro & KwikPen. Berechnen Sie exakte Pen-Klicks für 2.5mg, 5mg, 7.5mg, 10mg, 12.5mg, 15mg. Präzise Dosisberechnung für Diabetes-Behandlung." />
-  <meta name="keywords" content="Mounjaro Dosierungsrechner, Tirzepatide Rechner, Mounjaro Pen Klicks berechnen, TirzeCalc, Mounjaro Rechner Deutschland, Tirzepatide Dosierungsrechner, Mounjaro Dosis Rechner, Pen Klicks Rechner, Mounjaro Injektionsrechner, Tirzepatide Pen Rechner, Mounjaro KwikPen Rechner, Tirzepatide KwikPen Dosierung, KwikPen Dosierungsrechner, Mounjaro KwikPen Klicks, Tirzepatide KwikPen Anwendung" />
+  <meta name="keywords" content="Mounjaro Dosierungsrechner, Tirzepatide Rechner, Mounjaro Pen Klicks berechnen, TirzeCalc, Mounjaro Rechner Deutschland, Tirzepatide Dosierungsrechner, Mounjaro Dosis Rechner, Pen Klicks Rechner, Mounjaro Injektionsrechner, Tirzepatide Pen Rechner, Mounjaro KwikPen Rechner, Tirzepatide KwikPen Dosierung, KwikPen Dosierungsrechner, Mounjaro KwikPen Klicks, Tirzepatide KwikPen Anwendung, Abnehmspritze, Mounjaro Abnehmspritze, Tirzepatide Abnehmspritze, Abnehmspritze Dosierung, Abnehmspritze Rechner, Gewichtsverlust Spritze, Abnehmspritze Mounjaro, Abnehmspritze Tirzepatide, GLP-1 Abnehmspritze" />
   <meta name="author" content="Staubi" />
   <meta property="og:title" content="TirzeCalc.de – Tirzepatid Dosis- & Klickrechner" />
   <meta property="og:description" content="Kostenloser Tirzepatid Dosierungsrechner für Mounjaro & KwikPen. Berechnen Sie exakte Pen-Klicks für Ihre Diabetes-Behandlung." />
@@ -26,6 +26,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
   <link rel="manifest" href="site.webmanifest" />
   <link rel="stylesheet" href="style.css?v=2.2" />
+  <link rel="canonical" href="https://tirzecalc.de/" />
 </head>
 
 <body class="dark-mode">
