--- a/impressum_en.html
+++ b/impressum_en.html
@@ -17,6 +17,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="style.css">
+    <link rel="canonical" href="https://tirzecalc.de/impressum_en.html" />
 </head>
 <body class="dark-mode">
     <div class="top-bar">
