--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://tirzecalc.de" />
   <meta property="og:site_name" content="TirzeCalc.de" />
+  <meta property="og:image" content="https://tirzecalc.de/preview.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="TirzeCalc.de – Tirzepatid Dosis- & Klickrechner" />
+  <meta name="twitter:description" content="Kostenloser Tirzepatid Dosierungsrechner für Mounjaro & KwikPen. Berechnen Sie exakte Pen-Klicks für Ihre Diabetes-Behandlung." />
+  <meta name="twitter:image" content="https://tirzecalc.de/preview.jpg" />
 
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <link rel="shortcut icon" href="favicon.ico" />
