--- a/impressum.html
+++ b/impressum.html
@@ -19,7 +19,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="style.css?v=2.0">
+    <link rel="stylesheet" href="style.css">
     <link rel="canonical" href="https://tirzecalc.de/impressum.html" />
 </head>
 <body class="dark-mode">
@@ -37,13 +37,11 @@
       <a href="index.html" class="site-title" id="siteTitle">TirzeCalc.de</a>
       
       <!-- Share Button rechts -->
-      <div class="header-icons">
-        <button class="share-btn" id="shareBtn" aria-label="Seite teilen">
-          <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
-            <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34,3,3,3c.79,0,1.5-.31,2.04-.81l7.12,4.16c-.05.21-.08.43-.08.65 0 1.61,1.31,2.92,2.92,2.92 1.61,0,2.92-1.31,2.92-2.92s-1.31-2.92-2.92-2.92z"/>
-          </svg>
-        </button>
-      </div>
+      <button class="share-btn" id="shareBtn" aria-label="Seite teilen">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
+          <path d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34,3,3,3c.79,0,1.5-.31,2.04-.81l7.12,4.16c-.05.21-.08.43-.08.65 0 1.61,1.31,2.92,2.92,2.92 1.61,0,2.92-1.31,2.92-2.92s-1.31-2.92-2.92-2.92z"/>
+        </svg>
+      </button>
     </div>
   </header>
 
@@ -143,6 +141,6 @@
         </div>
     </div>
 
-    <script src="script.js?v=2.3"></script>
+    <script src="script.js"></script>
 </body>
 </html>
