--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
   <link rel="manifest" href="site.webmanifest" />
-  <link rel="stylesheet" href="style.css?v=2.4" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="canonical" href="https://tirzecalc.de/" />
 </head>
 
@@ -159,6 +159,6 @@
   </main>
 
 
-  <script src="script.js?v=2.4"></script>
+  <script src="script.js"></script>
 </body>
 </html>
