--- a/impressum.html
+++ b/impressum.html
@@ -141,6 +141,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=2.5"></script>
 </body>
 </html>
