--- a/info_en.html
+++ b/info_en.html
@@ -19,7 +19,7 @@
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
   <link rel="manifest" href="site.webmanifest" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css?v=1.1" />
   <link rel="canonical" href="https://tirzecalc.de/info_en.html" />
 </head>
 
