--- a/index.html
+++ b/index.html
@@ -139,6 +139,14 @@
         </p>
         <div class="dose-display"><span id="currentDoseValue">0.00</span> mg</div>
 
+        <div class="dose-options">
+          <label class="checkbox-container">
+            <input type="checkbox" id="halveDose" />
+            <span class="checkmark"></span>
+            <span class="checkbox-label">Dosis halbieren (÷ 2)</span>
+          </label>
+        </div>
+
         <div class="dose-slider-wrapper">
           <input type="range" id="doseSlider" min="0" max="0" step="1" value="0" disabled />
           <div class="slider-ticks" id="sliderTicks"></div>
